remove my keycloak configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ server.port=8090
 #for npm to work, not sure if this is good for production
 vaadin.compatibilityMode=false
 
-keycloak.realm=htp
-keycloak.resource=web
-keycloak.auth-server-url=https://keycloak.gnomon.com.gr/auth
+keycloak.realm=your_comfiguration
+keycloak.resource=your_comfiguration
+keycloak.auth-server-url=your_comfiguration
 keycloak.ssl-required=external
-keycloak.credentials.secret=fed643cb-aaf9-421f-8889-3918bd2f2e56
+keycloak.credentials.secret=<your_comfiguration
 keycloak.principal-attribute=email
 
 keycloak.cors = true
